# hermes

./: .gitignore  Config.in  external.desc  external.mk
board/hermes-pi5/: cmdline.txt  config.txt  genimage.cfg  genimage.cfg.in  linux-bcm2712-pinctrl-module.fragment  linux-gpu.fragment  post-build.sh  post-fakeroot.sh  post-image.sh
board/hermes-pi5/patches/qt6shadertools/: 0001-glslang-add-missing-cstdint-include-gcc15.patch
board/hermes-pi5/rootfs-overlay/etc/dbus-1/system.d/: pipewire-bluez.conf
board/hermes-pi5/rootfs-overlay/etc/default/: gpsd
board/hermes-pi5/rootfs-overlay/etc/modprobe.d/: brcmfmac.conf
board/hermes-pi5/rootfs-overlay/etc/systemd/network/: 10-eth.network
board/hermes-pi5/rootfs-overlay/etc/systemd/system/: hermes-music.service  hermes.service
board/hermes-pi5/rootfs-overlay/etc/systemd/system/gpsd.socket.d/: no-ipv6.conf
board/hermes-pi5/rootfs-overlay/etc/systemd/system/multi-user.target.wants/: hermes.service
board/hermes-pi5/rootfs-overlay/etc/systemd/system/wireplumber.service.d/: state-dir.conf
board/hermes-pi5/rootfs-overlay/etc/systemd/system/wpa_supplicant.service.d/: hermes.conf
board/hermes-pi5/rootfs-overlay/etc/wireplumber/wireplumber.conf.d/: 50-hermes-bluetooth.conf
board/hermes-pi5/rootfs-overlay/etc/wpa_supplicant/: wpa_supplicant.conf
board/hermes-pi5/rootfs-overlay/usr/lib/dhcpcd/dhcpcd-hooks/: 90-hotspot-static
board/hermes-pi5/rootfs-overlay/usr/share/hermes/: roaddata.sqlite
board/hermes-pi5/rootfs-overlay/usr/share/hermes/styles/: map-light.json
configs/: hermes_pi5_defconfig
docs/: architecture.md  buildroot-setup.md  dependencies.md  improvements.md  modules.md  ui-dev-guide.md  ui-layout.md
docs/elise/: README.md  architecture.md  build-deploy.md  components.md  interactions.md  theming.md
docs/learning/: buildroot.md
package/elise/: Config.in  elise.mk
package/hermes-app/: Config.in  hermes-app.mk
package/hermes-ipc/: Config.in  hermes-ipc.mk
package/hermes-music/: Config.in  hermes-music-bootstrap.service  hermes-music-bootstrap.sh  hermes-music.mk  hermes-music.service
package/hermes-systemd/: Config.in  hermes-systemd.mk
package/python-spotipy/: Config.in  python-spotipy.hash  python-spotipy.mk
package/python-yt-dlp/: Config.in  python-yt-dlp.hash  python-yt-dlp.mk
package/python-ytmusicapi/: Config.in  python-ytmusicapi.hash  python-ytmusicapi.mk
scripts/: README.md  build.sh  deploy.sh  flash.sh  image.sh  lib.sh  pi.sh
src/elise/: CMakeLists.txt  main.cpp
src/elise/core/: GpsController.cpp  GpsController.h  NavigationController.cpp  NavigationController.h  PlayerController.cpp  PlayerController.h  RoadInfoController.cpp  RoadInfoController.h  SystemController.cpp  SystemController.h  WeatherController.cpp  WeatherController.h
src/elise/core/components/: LinearIndicatorManager.cpp  LinearIndicatorManager.h  WavyLine.cpp  WavyLine.h
src/elise/core/settings/: AppearanceController.cpp  AppearanceController.h  AudioController.cpp  AudioController.h  BluetoothController.cpp  BluetoothController.h  NetworkController.cpp  NetworkController.h  OfflineMapsController.cpp  OfflineMapsController.h  SettingsController.cpp  SettingsController.h  SystemInfoController.cpp  SystemInfoController.h
src/elise/docs/: ARCHITECTURE.md  COMPONENTS.md  INTERACTIONS.md  THEMING.md
src/elise/ui/: ActionSheet.qml  ActionSheetView.qml  AnchorAnim.qml  Anim.qml  AnimLoader.qml  ButtonBase.qml  CAnim.qml  CUtils.qml  CarMap.qml  CircularProgress.qml  CollapsibleSection.qml  Colours.qml  CompassRose.qml  ConnectedRect.qml  CustomMouseArea.qml  Elevation.qml  Fab.qml  FilledSlider.qml  GlobalInputBlocker.qml  IconButton.qml  IconTextButton.qml  Icons.qml  InfoRow.qml  ItemList.qml  Keyboard.qml  KeyboardKey.qml  ListRow.qml  LoadingIndicator.qml  Main.qml  MapBridge.qml  MapSearchBar.qml  MapView.qml  Mask.qml  MaterialIcon.qml  MaterialSymbols.qml  MaterialSymbolsCodepoints.qml  Menu.qml  Modal.qml  NavRow.qml  NavigationOverlay.qml  (+51 more)
src/hermes-app/: CMakeLists.txt  MusicBackend.cpp  MusicBackend.h  NetworkBackend.cpp  NetworkBackend.h  main.cpp
src/hermes-app/qml/: Main.qml  MapView.qml  MusicView.qml  PlayerStrip.qml  SettingsPanel.qml  TopBar.qml
src/hermes-music/: build_binary.sh  config.py  downloader.py  hermes-music.service  history.py  main.py  requirements.txt  resolver.py
src/hermes-music/api/: routes.py
src/hermes-music/auth/: token_store.py
src/hermes-music/providers/: soundcloud.py  spotify.py  ytmusic.py
tools/roaddata/: build.py  build_places.py  make_map_styles.py  map-dark.json  schema.sql
