cmake_minimum_required(VERSION 3.16)
project(hermes VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick)

qt_standard_project_setup(REQUIRES 6.5)

qt_add_executable(hermes
    main.cpp
)

qt_add_qml_module(hermes
    URI Hermes
    VERSION 1.0
    QML_FILES
        qml/Main.qml
)

target_link_libraries(hermes PRIVATE
    Qt6::Core
    Qt6::Gui
    Qt6::Qml
    Qt6::Quick
)

install(TARGETS hermes DESTINATION /usr/bin)
